--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "type": "git",
     "url": "git+https://github.com/rahul-6809/shortenUrl_group6.git"
   },
-  "author": "rahul pallavi gaurav shubham",
+  "author": "rahul ",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rahul-6809/shortenUrl_group6/issues"
   },
   "homepage": "https://github.com/rahul-6809/shortenUrl_group6#readme",
   "dependencies": {
-    
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
-    
+    "redis": "^3.0.0",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   },
